fix landing header alignments

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13532,7 +13532,7 @@ p {
   }
 
   #landing-header {
-    width: 60%;
+    width: 80%;
   }
 
   #landing-header>h1 {
@@ -13771,6 +13771,7 @@ p {
   #landing-header {
     width: 100% !important;
     text-align: center;
+    margin-top: 2rem;
   }
 
   .landing-container {
@@ -13806,18 +13807,6 @@ p {
   .btn-xxl {
     font-size: 0.9rem !important;
     min-width: 17rem !important;
-  }
-}
-
-@media (max-width: 540px) {
-
-  .sticky-logo {
-    width: 5.5rem !important;
-    padding: 4px 7px !important;
-  }
-
-  #landing-header>h1 {
-    font-size: 1.5rem !important;
   }
 }
 
